--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-slingshot",
-  "version": "1.0.1",
-  "description": "Starter kit for creating apps with React and Redux",
+  "name": "ConnectUs",
+  "version": "1.0.2",
+  "description": "A connecting geo-based platform for small gigs",
   "scripts": {
     "prestart": "npm run remove-dist",
     "start": "parallelshell \"npm run test:watch\" \"npm run open:src\"",
@@ -19,7 +19,7 @@
     "test": "cross-env NODE_ENV=test mocha --reporter progress --compilers js:babel/register --recursive \"./src/**/*.spec.js\"",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Cory House",
+  "author": "Tuan Truong",
   "license": "MIT",
   "dependencies": {
     "react": "0.14.0",
@@ -43,6 +43,8 @@
     "eslint-loader": "1.1.1",
     "eslint-plugin-react": "3.10.0",
     "file-loader": "0.8.5",
+    "imports-loader": "0.6.5",
+    "jquery": "2.2.0",
     "mocha": "2.3.3",
     "node-sass": "3.4.2",
     "parallelshell": "2.0.0",
